fixes vizbuilder collapse icon on control scroll

--- a/app/pages/Visualize.css
+++ b/app/pages/Visualize.css
@@ -42,7 +42,7 @@
     & .toggle-sidebar {
       background: none;
       box-shadow: none;
-      left: 250px;
+      left: 290px;
       &:before {
         color: var(--red);
       }
